# silicon

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: README.md  sync_from_bat.py  sync_from_bat.sh
assets/syntaxes/: AWK.sublime-syntax  CMake C Header.sublime-syntax  CMake C++ Header.sublime-syntax  CMake.sublime-syntax  CMakeCache.sublime-syntax  CMakeCommands.sublime-syntax  Elixir.sublime-syntax  HTML (EEx).sublime-syntax  Julia.sublime-syntax  LESS.sublime-syntax  PowerShellSyntax.sublime-syntax  SSH Config.sublime-syntax  SSHD Config.sublime-syntax  TOML.sublime-syntax  Terraform.sublime-syntax  jsonnet.sublime-syntax  purescript.sublime-syntax  varlink.sublime-syntax
assets/themes/: .gitignore  DarkNeon.tmTheme  Dracula.tmTheme  GitHub.tmTheme  Monokai Extended Bright.tmTheme  Monokai Extended Light.tmTheme  Monokai Extended Origin.tmTheme  Sublime Snazzy.tmTheme  zenburn.tmTheme
ci/: before_deploy.ps1  before_deploy.sh  script.sh
example/: example.rs  example.sh
src/: assets.rs  bin.rs  blur.rs  clipboard.rs  config.rs  directories.rs  error.rs  font.rs  formatter.rs  hb_wrapper.rs  imageproc.rs  lib.rs  main.rs  new_font.rs  utils.rs
src/formatter/: image.rs  svg.rs
src/gauss/: gauss.c
