[package]
name = "silicon"
version = "0.4.1"
description = "Create beautiful image of your code"
authors = ["Aloxaf <aloxafx@gmail.com>"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/Aloxaf/silicon"
license = "MIT"
edition = "2018"

[dependencies]
dirs = "3.0"
imageproc = "0.22.0"
font-kit = "0.10"
clipboard = "0.5.0"
tempfile = "3.1.0"
conv = "0.3.3"
pathfinder_geometry = "0.5.1"
log = "0.4.11"
lazy_static = "1.4.0"
shell-words = { version = "1.0.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
pasteboard = "0.1.2"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "4.0.2"
image = { version = "0.23", default-features = false, features = ["jpeg", "bmp", "jpeg_rayon"] }

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png", "jpeg_rayon"]

[dependencies.syntect]
version = "4.4"
default-features = false
features = ["parsing", "dump-load", "regex-onig"]

[dependencies.anyhow]
version = "1.0"
optional = true

[dependencies.structopt]
version = "0.3"
default-features = false
features = ["color", "wrap_help"]
optional = true

[dependencies.env_logger]
version = "0.8.3"
default-features = false
features = ["termcolor", "atty", "humantime"]
optional = true

[features]
# fearures required for silicon as a application
# disable it when using as a library
default = ["bin"]
bin = ["structopt", "env_logger", "anyhow", "shell-words"]
