[package]
name = "silicon"
version = "0.5.2"
description = "Create beautiful image of your code"
authors = ["Aloxaf <aloxafx@gmail.com>"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/Aloxaf/silicon"
license = "MIT"
edition = "2018"

[features]
# bin fearure is required for silicon as a application
# disable it when using as a library
default = ["bin", "harfbuzz"]
bin = ["structopt", "env_logger", "anyhow", "shell-words"]
harfbuzz = ["harfbuzz-sys", "font-kit/loader-freetype-default", "font-kit/source-fontconfig-default"]

[dependencies]
dirs = "4.0"
imageproc = "0.23.0"
clipboard = "0.5.0"
tempfile = "3.8.1"
conv = "0.3.3"
pathfinder_geometry = "0.5.1"
log = "0.4.20"
lazy_static = "1.4.0"
shell-words = { version = "1.1.0", optional = true }
rayon = "1.8.0"
font-kit = "0.11"
harfbuzz-sys = { version = "0.5.0", optional = true }

[dependencies.image]
version = "0.24"
default-features = false
features = ["jpeg", "png", "jpeg_rayon"]

[dependencies.syntect]
version = "5.1"
default-features = false
features = ["parsing", "dump-load", "regex-onig", "plist-load", "yaml-load"]

[dependencies.anyhow]
version = "1.0"
optional = true

[dependencies.structopt]
version = "0.3"
default-features = false
features = ["color", "wrap_help"]
optional = true

[dependencies.env_logger]
version = "0.9.3"
default-features = false
features = ["termcolor", "atty", "humantime"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
pasteboard = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "4.5.0"
image = { version = "0.24", default-features = false, features = ["jpeg", "bmp", "jpeg_rayon"] }

[patch.crates-io]
pathfinder_simd = { version = "0.5.0", git = "https://github.com/servo/pathfinder" }
